objects/Session_Speaker__c.object
<CustomObject>
    <fields>
        <fullName>Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Speaker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Speaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Sessions Speakers</relationshipLabel>
        <relationshipName>Sessions_Speakers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <label>Speaker</label>
        <referenceTo>Speaker__c</referenceTo>
        <relationshipLabel>Sessions Speakers</relationshipLabel>
        <relationshipName>Sessions_Speakers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Session Speaker</label>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>Session Speaker ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sessions Speakers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>